<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:srcCompat="@drawable/favicon_instagram" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/videoFoundSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="center_vertical"
                android:textColor="@color/primaryColor" />

            <TextView
                android:id="@+id/videoFoundName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true" />

            <TextView
                android:id="@+id/videoFoundExt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" />

        </LinearLayout>

        <CheckBox
            android:id="@+id/videoFoundCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/videoFoundExpand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <avd.downloader.utils.CustomButton
            android:id="@+id/videoFoundRename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/rename"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/videoFoundDownload"
            app:layout_constraintTop_toTopOf="@id/videoFoundDownload" />

        <avd.downloader.utils.CustomButton
            android:id="@+id/videoFoundDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/download"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <avd.downloader.utils.CustomButton
            android:id="@+id/videoFoundDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/delete"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/videoFoundDownload"
            app:layout_constraintTop_toTopOf="@id/videoFoundDownload" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>