
<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="avd.downloader.LMvdActivity">

        <EditText
            android:id="@+id/web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/go"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.2"
            android:layout_marginStart="20dp"
            android:hint="@string/enter_web"
            android:backgroundTint="@color/primaryColor"
            tools:targetApi="lollipop" />

        <ImageButton
            android:id="@+id/go"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_black"
            android:background="@drawable/ic_arrow_bg"
            android:tint="@color/secondaryColor"
            tools:ignore="ContentDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/web"
            android:layout_marginEnd="20dp"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_black_24dp"
            tools:ignore="ContentDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/homeSitesTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/try_these_sites"
            app:layout_constraintTop_toBottomOf="@id/web"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeSites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeSitesTitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:verticalScrollbarPosition="left"
            android:scrollbarStyle="outsideInset" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/menuLogoArea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/tertiaryColor"
            app:layout_constraintEnd_toEndOf="@id/drawerMenus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_launcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/logoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_title"
                android:textColor="@color/secondaryColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/drawerMenus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/menuLogoArea"
            android:background="@color/darkColor"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp">

                <avd.downloader.utils.NonScrollListView
                    android:id="@+id/menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:divider="@null"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Switch
                    android:id="@+id/adBlockerSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/listPreferredItemHeightSmall"
                    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
                    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                    android:text="@string/ad_blocker"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/menu" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>
